--- a/slides/index.html
+++ b/slides/index.html
@@ -4,23 +4,12 @@
 <head>
     <meta charset="utf-8">
 
-    <title>reveal.js - Slide Backgrounds</title>
+    <title>reveal.js - Math Plugin</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <link rel="stylesheet" href="../dist/reveal.css">
-    <link rel="stylesheet" href="../dist/theme/serif.css" id="theme">
-    <style type="text/css" media="screen">
-        .slides section.has-dark-background,
-        .slides section.has-dark-background h2 {
-            color: #fff;
-        }
-
-        .slides section.has-light-background,
-        .slides section.has-light-background h2 {
-            color: #222;
-        }
-    </style>
+    <link rel="stylesheet" href="../dist/theme/night.css" id="theme">
 </head>
 
 <body>
@@ -29,96 +18,186 @@
 
         <div class="slides">
 
-            <section data-background="#00ffff">
-                <h2>data-background: #00ffff</h2>
+            <section>
+                <h2>Faille XSS / CSRF </h2>
+                <footer>Lise Antoine Victor Esteban</footer>
             </section>
 
-            <section data-background="#bb00bb">
-                <h2>data-background: #bb00bb</h2>
+
+
+            <section data-auto-animate data-auto-animate-id="a">
+                <h3>XSS</h3>
             </section>
 
-            <section data-background-color="lightblue">
-                <h2>data-background: lightblue</h2>
+            <section data-auto-animate data-auto-animate-id="a">
+                <h3>Cross-Site Scripting</h3>
+            </section>
+
+            <section data-auto-animate data-auto-animate-id="a">
+
+                <h3>Cross-Site Scripting</h3>
+                <p>CSS</p>
+            </section>
+
+            <section data-auto-animate data-auto-animate-id="a">
+                <h3>Cross-Site Scripting</h3>
+                <p>Faille CSS ?</p>
+            </section>
+
+            <section data-auto-animate data-auto-animate-id="a">
+                <h3>Cross-Site Scripting</h3>
+                <p>Faille CSS ?</p>
+                <img data-src="/dist/images/css.png" style="width: 10%;">
+            </section>
+
+            <section data-auto-animate data-auto-animate-id="a">
+                <h3>Cross-Site Scripting</h3>
+                <p>XSS</p>
+                <p><b>X</b> pour le <b>Cross</b></p>
+
+            </section>
+
+
+            <section>
+                <h3>The Cauchy-Schwarz Inequality</h3>
+
+                <script type="math/tex; mode=display">
+						\left( \sum_{k=1}^n a_k b_k \right)^2 \leq \left( \sum_{k=1}^n a_k^2 \right) \left( \sum_{k=1}^n b_k^2 \right)
+					</script>
             </section>
 
             <section>
-                <section data-background="#ff0000">
-                    <h2>data-background: #ff0000</h2>
-                </section>
-                <section data-background="rgba(0, 0, 0, 0.2)">
-                    <h2>data-background: rgba(0, 0, 0, 0.2)</h2>
-                </section>
-                <section data-background="salmon">
-                    <h2>data-background: salmon</h2>
-                </section>
+                <h3>A Cross Product Formula</h3>
+
+                \[\mathbf{V}_1 \times \mathbf{V}_2 = \begin{vmatrix}
+                \mathbf{i} &amp; \mathbf{j} &amp; \mathbf{k} \\
+                \frac{\partial X}{\partial u} &amp; \frac{\partial Y}{\partial u} &amp; 0 \\
+                \frac{\partial X}{\partial v} &amp; \frac{\partial Y}{\partial v} &amp; 0
+                \end{vmatrix} \]
             </section>
 
-            <section data-background="rgba(0, 100, 100, 0.2)">
+            <section>
+                <h3>The probability of getting \(k\) heads when flipping \(n\) coins is</h3>
+
+                \[P(E) = {n \choose k} p^k (1-p)^{ n-k} \]
+            </section>
+
+            <section>
+                <h3>An Identity of Ramanujan</h3>
+
+                \[ \frac{1}{\Bigl(\sqrt{\phi \sqrt{5}}-\phi\Bigr) e^{\frac25 \pi}} =
+                1+\frac{e^{-2\pi}} {1+\frac{e^{-4\pi}} {1+\frac{e^{-6\pi}}
+                {1+\frac{e^{-8\pi}} {1+\ldots} } } } \]
+            </section>
+
+            <section>
+                <h3>A Rogers-Ramanujan Identity</h3>
+
+                \[ 1 + \frac{q^2}{(1-q)}+\frac{q^6}{(1-q)(1-q^2)}+\cdots =
+                \prod_{j=0}^{\infty}\frac{1}{(1-q^{5j+2})(1-q^{5j+3})}\]
+            </section>
+
+            <section>
+                <h3>Maxwell&#8217;s Equations</h3>
+
+                \[ \begin{aligned}
+                \nabla \times \vec{\mathbf{B}} -\, \frac1c\, \frac{\partial\vec{\mathbf{E}}}{\partial t} &amp; =
+                \frac{4\pi}{c}\vec{\mathbf{j}} \\ \nabla \cdot \vec{\mathbf{E}} &amp; = 4 \pi \rho \\
+                \nabla \times \vec{\mathbf{E}}\, +\, \frac1c\, \frac{\partial\vec{\mathbf{B}}}{\partial t} &amp; =
+                \vec{\mathbf{0}} \\
+                \nabla \cdot \vec{\mathbf{B}} &amp; = 0 \end{aligned}
+                \]
+            </section>
+
+            <section>
+                <h3>TeX Macros</h3>
+
+                Here is a common vector space:
+                \[L^2(\R) = \set{u : \R \to \R}{\int_\R |u|^2 &lt; +\infty}\]
+                used in functional analysis.
+            </section>
+
+            <section>
                 <section>
-                    <h2>Background applied to stack</h2>
+                    <h3>The Lorenz Equations</h3>
+
+                    <div class="fragment">
+                        \[\begin{aligned}
+                        \dot{x} &amp; = \sigma(y-x) \\
+                        \dot{y} &amp; = \rho x - y - xz \\
+                        \dot{z} &amp; = -\beta z + xy
+                        \end{aligned} \]
+                    </div>
                 </section>
+
                 <section>
-                    <h2>Background applied to stack</h2>
+                    <h3>The Cauchy-Schwarz Inequality</h3>
+
+                    <div class="fragment">
+                        \[ \left( \sum_{k=1}^n a_k b_k \right)^2 \leq \left( \sum_{k=1}^n a_k^2 \right) \left(
+                        \sum_{k=1}^n b_k^2 \right) \]
+                    </div>
                 </section>
-                <section data-background="rgb(66, 66, 66)">
-                    <h2>Background applied to slide inside of stack</h2>
+
+                <section>
+                    <h3>A Cross Product Formula</h3>
+
+                    <div class="fragment">
+                        \[\mathbf{V}_1 \times \mathbf{V}_2 = \begin{vmatrix}
+                        \mathbf{i} &amp; \mathbf{j} &amp; \mathbf{k} \\
+                        \frac{\partial X}{\partial u} &amp; \frac{\partial Y}{\partial u} &amp; 0 \\
+                        \frac{\partial X}{\partial v} &amp; \frac{\partial Y}{\partial v} &amp; 0
+                        \end{vmatrix} \]
+                    </div>
                 </section>
-            </section>
 
-            <section data-background-transition="slide" data-background="assets/image1.png">
-                <h2>Background image</h2>
-            </section>
+                <section>
+                    <h3>The probability of getting \(k\) heads when flipping \(n\) coins is</h3>
 
-            <section>
-                <section data-background-transition="slide" data-background="assets/image1.png">
-                    <h2>Background image</h2>
+                    <div class="fragment">
+                        \[P(E) = {n \choose k} p^k (1-p)^{ n-k} \]
+                    </div>
                 </section>
-                <section data-background-transition="slide" data-background="assets/image1.png">
-                    <h2>Background image</h2>
+
+                <section>
+                    <h3>An Identity of Ramanujan</h3>
+
+                    <div class="fragment">
+                        \[ \frac{1}{\Bigl(\sqrt{\phi \sqrt{5}}-\phi\Bigr) e^{\frac25 \pi}} =
+                        1+\frac{e^{-2\pi}} {1+\frac{e^{-4\pi}} {1+\frac{e^{-6\pi}}
+                        {1+\frac{e^{-8\pi}} {1+\ldots} } } } \]
+                    </div>
                 </section>
-            </section>
 
-            <section data-background="assets/image2.png" data-background-size="100px" data-background-repeat="repeat"
-                data-background-color="#111">
-                <h2>Background image</h2>
-                <pre>data-background-size="100px" data-background-repeat="repeat" data-background-color="#111"</pre>
-            </section>
+                <section>
+                    <h3>A Rogers-Ramanujan Identity</h3>
 
-            <section data-background="#888888">
-                <h2>Same background twice (1/2)</h2>
-            </section>
-            <section data-background="#888888">
-                <h2>Same background twice (2/2)</h2>
-            </section>
-
-            <section
-                data-background-video="https://s3.amazonaws.com/static.slid.es/site/homepage/v1/homepage-video-editor.mp4,https://s3.amazonaws.com/static.slid.es/site/homepage/v1/homepage-video-editor.webm">
-                <h2>Video background</h2>
-            </section>
-
-            <section
-                data-background-iframe="https://slides.com/news/make-better-presentations/embed?style=hidden&autoSlide=4000">
-                <h2>Iframe background</h2>
-            </section>
-
-            <section>
-                <section data-background="#417203">
-                    <h2>Same background twice vertical (1/2)</h2>
+                    <div class="fragment">
+                        \[ 1 + \frac{q^2}{(1-q)}+\frac{q^6}{(1-q)(1-q^2)}+\cdots =
+                        \prod_{j=0}^{\infty}\frac{1}{(1-q^{5j+2})(1-q^{5j+3})}\]
+                    </div>
                 </section>
-                <section data-background="#417203">
-                    <h2>Same background twice vertical (2/2)</h2>
-                </section>
-            </section>
 
-            <section data-background="#934f4d">
-                <h2>Same background from horizontal to vertical (1/3)</h2>
-            </section>
-            <section>
-                <section data-background="#934f4d">
-                    <h2>Same background from horizontal to vertical (2/3)</h2>
+                <section>
+                    <h3>Maxwell&#8217;s Equations</h3>
+
+                    <div class="fragment">
+                        \[ \begin{aligned}
+                        \nabla \times \vec{\mathbf{B}} -\, \frac1c\, \frac{\partial\vec{\mathbf{E}}}{\partial t} &amp; =
+                        \frac{4\pi}{c}\vec{\mathbf{j}} \\ \nabla \cdot \vec{\mathbf{E}} &amp; = 4 \pi \rho \\
+                        \nabla \times \vec{\mathbf{E}}\, +\, \frac1c\, \frac{\partial\vec{\mathbf{B}}}{\partial t} &amp;
+                        = \vec{\mathbf{0}} \\
+                        \nabla \cdot \vec{\mathbf{B}} &amp; = 0 \end{aligned}
+                        \]
+                    </div>
                 </section>
-                <section data-background="#934f4d">
-                    <h2>Same background from horizontal to vertical (3/3)</h2>
+
+                <section>
+                    <h3>TeX Macros</h3>
+
+                    Here is a common vector space:
+                    \[L^2(\R) = \set{u : \R \to \R}{\int_\R |u|^2 &lt; +\infty}\]
+                    used in functional analysis.
                 </section>
             </section>
 
@@ -127,18 +206,25 @@
     </div>
 
     <script src="../dist/reveal.js"></script>
+    <script src="../plugin/math/math.js"></script>
     <script>
-
-        // Full list of configuration options:
-        // https://revealjs.revealjs.com/config/
         Reveal.initialize({
-            center: true,
-
+            history: true,
             transition: 'linear',
-            // transitionSpeed: 'slow',
-            // backgroundTransition: 'slide'
-        });
 
+            math: {
+                // mathjax: 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js',
+                config: 'TeX-AMS_HTML-full',
+                TeX: {
+                    Macros: {
+                        R: '\\mathbb{R}',
+                        set: ['\\left\\{#1 \\; ; \\; #2\\right\\}', 2]
+                    }
+                }
+            },
+
+            plugins: [RevealMath]
+        });
     </script>
 
 </body>
