I had a cup of tea and now it's fixed

--- a/slides/index.html
+++ b/slides/index.html
@@ -233,6 +233,25 @@
             </section>
 
             <section data-auto-animate>
+                <h2>CRSF</h2>
+            </section>
+
+            <section data-auto-animate>
+                <h2>CRSF</h2>
+                <ul>
+                    <li>Top 7/10 sur OWASP 2010 => 2013</li>
+                </ul>
+            </section>
+
+            <section data-auto-animate>
+                <h2>CRSF</h2>
+                <ul>
+                    <li>Top 7/10 sur OWASP 2010 => 2013</li>
+                    <li>Attention tout de même</li>
+                </ul>
+            </section>
+
+            <section data-auto-animate>
                 <h3>CSRF Token</h3>
             </section>
 
@@ -255,7 +274,7 @@
                 <h3>CSRF Token</h3>
                 <ul>
                     <li>Généré aléatoirement</li>
-                    <li>Sécurise les requêtes <i>ex : ?id=27&<strong>token=45421587d1s548s</strong></i></li>
+                    <li>Sécurise les requêtes <br /><i>ex : ?id=27&<strong>token=45421587d1s548s</strong></i></li>
                     <li>L'attaquant ne peut donc jamais le connaître</li>
                 </ul>
             </section>
@@ -276,6 +295,15 @@
                 <section>
                     <img data-src="/dist/images/csrf-img.svg" style="width: 80%;" alt="miss code">
                 </section>
+            </section>
+
+            <section>
+                <h3>Une video qui résume bien</h3>
+                <iframe width="994" height="559" src="https://www.youtube.com/embed/X7SPRJaPL9c" 
+                        title="YouTube video player" frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+
             </section>
         </div>
 
