--- a/slides/index.html
+++ b/slides/index.html
@@ -225,18 +225,18 @@
             </section>
 
             <section data-auto-animate>
-                <h2>CRSF</h2>
+                <h2>CSRF</h2>
             </section>
 
             <section data-auto-animate>
-                <h2>CRSF</h2>
+                <h2>CSRF</h2>
                 <ul>
                     <li>Top 7/10 sur OWASP 2010 => 2013</li>
                 </ul>
             </section>
 
             <section data-auto-animate>
-                <h2>CRSF</h2>
+                <h2>CSRF</h2>
                 <ul>
                     <li>Top 7/10 sur OWASP 2010 => 2013</li>
                     <li>Attention tout de même</li>
@@ -247,7 +247,7 @@
             <section>
                 <section>
                     <h2>Exemple 1</h2>
-                    <p>Attaque csrf avec execution de formulaire</p>
+                    <p>Attaque CSRF avec execution de formulaire</p>
                 </section>
                 <section>
                     <img data-src="/dist/images/csrf-form.svg" style="width: 80%;" alt="csrf form exemple">
@@ -265,7 +265,7 @@
             <section>
                 <section>
                     <h2>Exemple 2</h2>
-                    <p>Attaque csrf avec chargement d'image</p>
+                    <p>Attaque CSRF avec chargement d'image</p>
                 </section>
                 <section>
                     <img data-src="/dist/images/csrf-img.svg" style="width: 80%;" alt="miss code">
