--- a/slides/index.html
+++ b/slides/index.html
@@ -52,7 +52,7 @@
             </section>
 
             <section>
-                <h2>Theorie</h2>
+                <h2>Théorie</h2>
             </section>
 
             <section data-auto-animate>
@@ -80,12 +80,12 @@
             </section>
 
             <section>
-                <h2>Comment ca marche ?</h2>
+                <h2>Comment ça marche ?</h2>
             </section>
 
             <section>
                 <h2>Le principe</h2>
-                <p>Injecter un script dans un site web dans le but qu'il soit éxécuté coté client</p>
+                <p>Injecter un script dans un site web dans le but qu'il soit éxécuté côté client</p>
                 <img data-src="/dist/images/js.png" style="width: 10%;" alt="js image">
             </section>
             <section>
@@ -117,7 +117,7 @@
             <section>
                 <section>
                     <h2>Exemple</h2>
-                    <p>source medium.com</p>
+                    <p>Source medium.com</p>
                 </section>
 
                 <section>
@@ -144,13 +144,13 @@
             <section data-auto-animate>
                 <h3>Vol d'informations</h3>
                 <p>
-                    <strong>Session</strong> et les <strong>Cookies</strong>
+                    <strong>Sessions</strong> et les <strong>Cookies</strong>
                 </p>
             </section>
             <section data-auto-animate>
                 <h3>Vol d'informations</h3>
                 <p>
-                    <strong>Session</strong> et les <strong>Cookies</strong>
+                    <strong>Sessions</strong> et les <strong>Cookies</strong>
                 </p>
                 <p>
                     <strong>KeyLogger</strong> en JS
@@ -199,7 +199,7 @@
             <section data-auto-animate>
                 <h3>Cross-Site Request Forgery</h3>
                 <p>
-                   Aussi appelé  <strong>sea surf</strong>
+                    Aussi appelée <strong>sea surf</strong>
                 </p>
             </section>
 
@@ -210,17 +210,18 @@
             <section data-auto-animate>
                 <h3>Idée</h3>
                 <p>
-                    Exécuter un <strong>script</strong> à l’insu de l’utilisateur 
-                 </p>
+                    Exécuter une/des <strong>action(s)</strong> à l’insu de l’utilisateur
+                </p>
             </section>
 
             <section data-auto-animate>
                 <h3>Idée</h3>
                 <p>
-                    Exécuter un <strong>script</strong> à l’insu de l’utilisateur 
+                    Exécuter une/des <strong>action(s)</strong> à l’insu de l’utilisateur
                 </p>
                 <p>
-                    Cela peut se faire au travers d'une <strong>image</strong> ou d'un site qui soumet un <strong>formulaire</strong>
+                    Cela peut se faire au travers d'une <strong>image</strong> ou d'un site qui soumet un
+                    <strong>formulaire</strong>
                 </p>
             </section>
 
@@ -243,11 +244,10 @@
                 </ul>
             </section>
 
-
             <section>
                 <section>
                     <h2>Exemple 1</h2>
-                    <p>Attaque csrf avec execution de formulaire</p>
+                    <p>Attaque csrf avec éxécution de formulaire</p>
                 </section>
                 <section>
                     <img data-src="/dist/images/csrf-form.svg" style="width: 80%;" alt="csrf form exemple">
@@ -278,7 +278,7 @@
                     </ul>
                 </section>
             </section>
-            
+
             <section data-auto-animate>
                 <h3>CSRF Token</h3>
             </section>
@@ -307,23 +307,29 @@
                 </ul>
             </section>
             <section>
-                <h2>Plus de references :</h2>
+                <h2>Plus de références :</h2>
                 <ul>
-                    <li><a href="https://cheatsheetseries.owasp.org/cheatsheets/Cross-Site_Request_Forgery_Prevention_Cheat_Sheet.html">OWASP CSRF page</a></li>
-                    <li><a href="https://developer.mozilla.org/en-US/docs/Glossary/CORS">Cross Origin Request Policy from the web bible</a></li>
+                    <li><a
+                            href="https://cheatsheetseries.owasp.org/cheatsheets/Cross-Site_Request_Forgery_Prevention_Cheat_Sheet.html">OWASP
+                            CSRF page</a></li>
+                    <li><a href="https://developer.mozilla.org/en-US/docs/Glossary/CORS">Cross Origin Request Policy
+                            from the web bible</a></li>
                 </ul>
             </section>
             <section>
                 <h3>Une video qui résume bien</h3>
                 <iframe width="994" height="559" src="https://www.youtube.com/embed/X7SPRJaPL9c"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
                 </iframe>
             </section>
             <section>
                 <h3>Merci pour votre attention !</h3>
                 <h3>Des questions ?</h3>
-                <iframe src="https://giphy.com/embed/IB9foBA4PVkKA" width="350" height="345" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/dancing-dance-excited-IB9foBA4PVkKA">via GIPHY</a></p>
+                <iframe src="https://giphy.com/embed/IB9foBA4PVkKA" width="350" height="345" frameBorder="0"
+                    class="giphy-embed" allowFullScreen></iframe>
+                <p><a href="https://giphy.com/gifs/dancing-dance-excited-IB9foBA4PVkKA">via GIPHY</a></p>
             </section>
         </div>
     </div>
