--- a/slides/index.html
+++ b/slides/index.html
@@ -382,6 +382,9 @@
                         <li>CORS : Access-Control-Allow-Header</li>
                     </ul>
                 </section>
+                <section>
+                    <img data-src="/dist/images/fetch-example.svg" style="width: 80%;" alt="miss code">
+                </section>
             </section>
             <section>
                 <section>
