--- a/slides/index.html
+++ b/slides/index.html
@@ -378,12 +378,17 @@
                     <ul>
                         <li>Content-Type Header</li>
                         <li>Accept Header</li>
-                        <li>CORS : Access-Control-Allow-Origin</li>
-                        <li>CORS : Access-Control-Allow-Header</li>
                     </ul>
                 </section>
                 <section>
                     <img data-src="/dist/images/fetch-example.svg" style="width: 80%;" alt="miss code">
+                </section>
+                 <section>
+                    <h3>Solutions</h3>
+                    <ul>
+                        <li>CORS : Access-Control-Allow-Origin</li>
+                        <li>CORS : Access-Control-Allow-Header</li>
+                    </ul>
                 </section>
             </section>
             <section>
