--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-<body>
+<body style="font-size: 90px;  text-align:center; margin-top: 402vh">
     <a href="/slides">Cours</a>
-    <a>TP</a>
+    <a href="https://xss-csrf-tp.herokuapp.com/">TP</a>
 </body>
 
 
